hugr-llvm/src/emit/snapshots/hugr_llvm__emit__test__test_fns__emit_hugr_dfg@pre-mem2reg@llvm20.snap
---
source: hugr-llvm/src/emit/test.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define private {} @_hl.main.1({} %0) {
alloca_block:
  %"0" = alloca {}, align 8
  %"2_0" = alloca {}, align 8
  %"4_0" = alloca {}, align 8
  %"5_0" = alloca {}, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store {} %0, ptr %"2_0", align 1
  %"2_01" = load {}, ptr %"2_0", align 1
  store {} %"2_01", ptr %"5_0", align 1
  %"5_02" = load {}, ptr %"5_0", align 1
  store {} %"5_02", ptr %"4_0", align 1
  %"4_03" = load {}, ptr %"4_0", align 1
  store {} %"4_03", ptr %"0", align 1
  %"04" = load {}, ptr %"0", align 1
  ret {} %"04"
}
